--- a/src/app/pages/tabs/home/home.page.html
+++ b/src/app/pages/tabs/home/home.page.html
@@ -29,11 +29,10 @@
   <div *ngFor="let class of profClasses" class="subjects">
     <ion-row>
       <ion-col class="subject">
-        <!-- Cálculo Diferencial -->
         {{class.name}}
       </ion-col>
     </ion-row>
-    <ion-row (click)="registeringPresence()" class="first-item">
+    <ion-row (click)="registeringPresence(class.class)" class="first-item">
       <ion-col size="10">
         <ion-item>
           Turma {{class.class}}
