--- a/src/app/pages/presence/presence.page.html
+++ b/src/app/pages/presence/presence.page.html
@@ -164,7 +164,7 @@
   </ion-fab>
 
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-    <ion-button color="primary" shape="round">
+    <ion-button (click)="savePresence()" color="primary" shape="round">
       Salvar
     </ion-button>
   </ion-fab>
