--- a/src/app/pages/presence/presence.page.scss
+++ b/src/app/pages/presence/presence.page.scss
@@ -34,6 +34,7 @@ $color-grey:grey;
     color: $color-grey;
     font-size: 14px;
     margin: 0;
+    text-align: center;
 }
 .emptyItem{
     width: 100%;
