--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -27,7 +27,7 @@
     </ion-row>
     <ion-row class="buttons">
       <ion-col size="6">
-        <ion-button color="success" shape="round" (click)="iamStudent()">Sou aluno(a)</ion-button>
+        <ion-button class="button1" color="success" shape="round" (click)="iamStudent()">Sou aluno(a)</ion-button>
       </ion-col>
       <ion-col size="6">
         <ion-button color="primary" shape="round" (click)="iamProfessor()">Sou professor(a)</ion-button>
