--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -26,11 +26,11 @@
       </ion-col>
     </ion-row>
     <ion-row class="buttons">
-      <ion-col size="6">
-        <ion-button class="button1" color="success" shape="round" (click)="iamStudent()">Sou aluno(a)</ion-button>
+      <ion-col>
+        <ion-button class="button1" color="success" shape="round" size="small" (click)="iamStudent()">Sou aluno(a)</ion-button>
       </ion-col>
-      <ion-col size="6">
-        <ion-button color="primary" shape="round" (click)="iamProfessor()">Sou professor(a)</ion-button>
+      <ion-col>
+        <ion-button class="button2" color="primary" shape="round" size="small" (click)="iamProfessor()">Sou professor(a)</ion-button>
       </ion-col>
     </ion-row>
   </ion-grid>
