--- a/src/app/pages/presence/presence.page.html
+++ b/src/app/pages/presence/presence.page.html
@@ -28,10 +28,7 @@
   <ion-item>
     <ion-label>Data</ion-label>
     <ion-select [interfaceOptions]="customPopoverOptions" interface="popover" placeholder="Data">
-      <ion-select-option value="brown">Brown</ion-select-option>
-      <ion-select-option value="blonde">Blonde</ion-select-option>
-      <ion-select-option value="black">Black</ion-select-option>
-      <ion-select-option value="red">Red</ion-select-option>
+      <ion-select-option value="today">Hoje</ion-select-option>
     </ion-select>
   </ion-item>
 
